@@ -19,9 +19,9 @@
 #define IOTDB_NATIVE_RESULT_H
 #include <optional>
 namespace iotdb::tsfile {
-enum class file_error { OK = 0, FORBIDDEN = 1, NOT_EXISTENT, ERROR_WRITING };
+enum class FileError { OK = 0, FORBIDDEN = 1, NOT_EXISTENT, ERROR_WRITING, ERROR_READING };
 template <typename T, typename V>
-class value_result {
+class ValueResult {
    public:
     result() {}
     std::optional<V> value() const { return _value; }
@@ -32,11 +32,12 @@ class value_result {
     T _error;
 };
 template <typename T>
-class status_result {
+class StatusResult {
    public:
-    status_result() {}
-    status_result(const T& error) : _error(error) {}
+    StatusResult() {}
+    StatusResult(const T& error) : _error(error) {}
     std::optional<T> value() const { return _value; }
+
 
    private:
     T _error;
