@@ -18,5 +18,5 @@ extern "C" {
 #include <inttypes.h>
 #include <string.h>
 
-int siphash(const void* in, const size_t inlen, const void* k, uint8_t* out, const size_t outlen);
+int SipHash(const void* in, const size_t inlen, const void* k, uint8_t* out, const size_t outlen);
 }
